Enforce project code style